k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-quiz
  namespace: k8s-quiz
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-quiz
  template:
    metadata:
      labels:
        app: k8s-quiz
    spec:
      imagePullSecrets:
      - name: dockerhub-secret
      containers:
      - name: k8s-quiz
        image: nikolajer/k8squiz:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
