k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-quiz
  namespace: k8s-quiz
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - k8s-quiz.nikolay-eremeev.com
    secretName: k8s-quiz-tls
  rules:
  - host: k8s-quiz.nikolay-eremeev.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-quiz-service
            port:
              number: 80
